fix: limit width of title (don't overlap with close/share icons)

--- a/style.css
+++ b/style.css
@@ -121,6 +121,7 @@ input#search.error {
 
 .container.law .title {
     font-weight: bold;
+    width: calc(100% - 5em + 2.5%);
 }
 
 a {
